--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
           <li class="menu-item dropdown">
             <a href="#">Serviços</a>
             <ul class="dropdown-menu">
-              <li><a href="servicos/mei/">MEI</a></li>
-              <li><a href="servicos/pessoa-fisica/">Pessoa Física</a></li>
-              <li><a href="servicos/certidoes-regularizacoes/">Certidões e Regularizações</a></li>
-              <li><a href="servicos/certificado-digital/">Certificado Digital</a></li>
-              <li><a href="servicos/contabeis/">Serviços Contábeis</a></li>
-              <li><a href="servicos/outros/">Outros Serviços</a></li>
+              <li><a href="./servicos/mei/index.html">MEI</a></li>
+              <li><a href="./servicos/pessoa-fisica/index.html">Pessoa Física</a></li>
+              <li><a href="./servicos/certidoes-regularizacoes/index.html">Certidões e Regularizações</a></li>
+              <li><a href="./servicos/certificado-digital/index.html">Certificado Digital</a></li>
+              <li><a href="./servicos/contabeis/index.html">Serviços Contábeis</a></li>
+              <li><a href="./servicos/outros/index.html">Outros Serviços</a></li>
             </ul>
           </li>
 
