--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
           <li class="menu-item dropdown">
             <a href="#">Serviços</a>
             <ul class="dropdown-menu">
-              <li><a href="servicos/mei/">MEI</a></li>
-              <li><a href="servicos/pessoa-fisica/">Pessoa Física</a></li>
-              <li><a href="servicos/certidoes-regularizacoes/">Certidões e Regularizações</a></li>
-              <li><a href="servicos/certificado-digital/">Certificado Digital</a></li>
-              <li><a href="servicos/contabeis/">Serviços Contábeis</a></li>
-              <li><a href="servicos/outros/">Outros Serviços</a></li>
+              <a href="/jl-servicos-contabeis/servicos/mei/">MEI</a>
+              <li><a href="/jl-servicos-contabeis/servicos/pessoa-fisica/">Pessoa Física</a></li>
+              <li><a href="/jl-servicos-contabeis/servicos/certidoes-regularizacoes/">Certidões e Regularizações</a></li>
+              <li><a href="/jl-servicos-contabeis/servicos/certificado-digital/">Certificado Digital</a></li>
+              <li><a href="/jl-servicos-contabeis/servicos/contabeis/">Serviços Contábeis</a></li>
+              <li><a href="/jl-servicos-contabeis/servicos/outros/">Outros Serviços</a></li>
             </ul>
           </li>
 
