--- a/servicos/mei/index.html
+++ b/servicos/mei/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Serviços MEI | J L Serviços Contábeis</title>
-  <link rel="stylesheet" href="../../style.css">
+  <link rel="stylesheet" href="/jl-servicos-contabeis/style.css">
+
 </head>
 
 <body>
