--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             <a href="#">Serviços</a>
             <ul class="dropdown-menu">
               <a href="/jl-servicos-contabeis/servicos/mei/">MEI</a>
-              <li><a href="/jl-servicos-contabeis/servicos/pessoa-fisica/">Pessoa Física</a></li>
-              <li><a href="/jl-servicos-contabeis/servicos/certidoes-regularizacoes/">Certidões e Regularizações</a></li>
-              <li><a href="/jl-servicos-contabeis/servicos/certificado-digital/">Certificado Digital</a></li>
-              <li><a href="/jl-servicos-contabeis/servicos/contabeis/">Serviços Contábeis</a></li>
-              <li><a href="/jl-servicos-contabeis/servicos/outros/">Outros Serviços</a></li>
+             <a href="/jl-servicos-contabeis/servicos/pessoa-fisica/">Pessoa Física</a></li>
+              <a href="/jl-servicos-contabeis/servicos/certidoes-regularizacoes/">Certidões e Regularizações</a></li>
+              <a href="/jl-servicos-contabeis/servicos/certificado-digital/">Certificado Digital</a></li>
+              <a href="/jl-servicos-contabeis/servicos/contabeis/">Serviços Contábeis</a></li>
+              <a href="/jl-servicos-contabeis/servicos/outros/">Outros Serviços</a></li>
             </ul>
           </li>
 
