--- a/index.html
+++ b/index.html
@@ -28,12 +28,16 @@
           <li class="menu-item dropdown">
             <a href="#">Serviços</a>
             <ul class="dropdown-menu">
-              <a href="/jl-servicos-contabeis/servicos/mei/">MEI</a>
-             <a href="/jl-servicos-contabeis/servicos/pessoa-fisica/">Pessoa Física</a></li>
-              <a href="/jl-servicos-contabeis/servicos/certidoes-regularizacoes/">Certidões e Regularizações</a></li>
-              <a href="/jl-servicos-contabeis/servicos/certificado-digital/">Certificado Digital</a></li>
-              <a href="/jl-servicos-contabeis/servicos/contabeis/">Serviços Contábeis</a></li>
-              <a href="/jl-servicos-contabeis/servicos/outros/">Outros Serviços</a></li>
+          <nav class="menu">
+  <ul>
+    <li><a href="/jl-servicos-contabeis/servicos/mei/">MEI</a></li>
+    <li><a href="/jl-servicos-contabeis/servicos/pessoa-fisica/">Pessoa Física</a></li>
+    <li><a href="/jl-servicos-contabeis/servicos/certidoes-regularizacoes/">Certidões e Regularizações</a></li>
+    <li><a href="/jl-servicos-contabeis/servicos/certificado-digital/">Certificado Digital</a></li>
+    <li><a href="/jl-servicos-contabeis/servicos/contabeis/">Serviços Contábeis</a></li>
+    <li><a href="/jl-servicos-contabeis/servicos/outros/">Outros Serviços</a></li>
+  </ul>
+</nav>
             </ul>
           </li>
 
