--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>J L Serviços Contábeis | Atendimento Online</title>
 
   <!-- CSS -->
@@ -14,36 +15,37 @@
 
 <body>
 
-  <!-- ===== HEADER ===== -->
+  <!-- ================= HEADER ================= -->
   <header class="site-header">
     <div class="container header-center">
 
       <h1 class="site-title">J L Serviços Contábeis</h1>
       <p class="site-subtitle">Atendimento Online</p>
 
+      <!-- BOTÃO MENU MOBILE -->
+      <button class="menu-toggle" aria-label="Abrir menu">
+        ☰
+      </button>
+
       <!-- MENU -->
       <nav class="main-nav">
         <ul class="menu">
 
           <li class="menu-item dropdown">
-            <a href="#">Serviços</a>
+            <a href="#" class="dropdown-toggle">Serviços</a>
             <ul class="dropdown-menu">
-          <nav class="menu">
-  <ul>
-    <li><a href="/jl-servicos-contabeis/servicos/mei/">MEI</a></li>
-    <li><a href="/jl-servicos-contabeis/servicos/pessoa-fisica/">Pessoa Física</a></li>
-    <li><a href="/jl-servicos-contabeis/servicos/certidoes-regularizacoes/">Certidões e Regularizações</a></li>
-    <li><a href="/jl-servicos-contabeis/servicos/certificado-digital/">Certificado Digital</a></li>
-    <li><a href="/jl-servicos-contabeis/servicos/contabeis/">Serviços Contábeis</a></li>
-    <li><a href="/jl-servicos-contabeis/servicos/outros/">Outros Serviços</a></li>
-  </ul>
-</nav>
+              <li><a href="/jl-servicos-contabeis/servicos/mei/">MEI</a></li>
+              <li><a href="/jl-servicos-contabeis/servicos/pessoa-fisica/">Pessoa Física</a></li>
+              <li><a href="/jl-servicos-contabeis/servicos/certidoes-regularizacoes/">Certidões e Regularizações</a></li>
+              <li><a href="/jl-servicos-contabeis/servicos/certificado-digital/">Certificado Digital</a></li>
+              <li><a href="/jl-servicos-contabeis/servicos/contabeis/">Serviços Contábeis</a></li>
+              <li><a href="/jl-servicos-contabeis/servicos/outros/">Outros Serviços</a></li>
             </ul>
           </li>
 
-          <li class="menu-item"><a href="blog/">Blog</a></li>
-          <li class="menu-item"><a href="sobre/">Sobre</a></li>
-          <li class="menu-item"><a href="lgpd/">LGPD</a></li>
+          <li class="menu-item"><a href="/jl-servicos-contabeis/blog/">Blog</a></li>
+          <li class="menu-item"><a href="/jl-servicos-contabeis/sobre/">Sobre</a></li>
+          <li class="menu-item"><a href="/jl-servicos-contabeis/lgpd/">LGPD</a></li>
 
         </ul>
       </nav>
@@ -51,73 +53,19 @@
     </div>
   </header>
 
-  <!-- ===== BLOG HOME ===== -->
+  <!-- ================= CONTEÚDO ================= -->
   <main class="container">
 
-    <!-- BLOCO BLOG -->
     <section class="blog-home">
 
-      <!-- Contabilidade Geral -->
       <article class="blog-highlight">
         <img src="https://via.placeholder.com/800x400" alt="Contabilidade Geral">
         <div class="blog-content">
           <h2>Contabilidade Geral</h2>
-          <p>Entenda os principais conceitos contábeis e como eles impactam o seu negócio ou sua vida financeira.</p>
+          <p>Entenda os principais conceitos contábeis e como eles impactam seu negócio.</p>
           <div class="blog-actions">
-            <a href="blog/contabilidade/" class="btn">Ler mais</a>
-            <a href="blog/contabilidade/" class="btn-outline">Ver todos</a>
-          </div>
-        </div>
-      </article>
-
-      <!-- Legislação -->
-      <article class="blog-highlight">
-        <img src="https://via.placeholder.com/800x400" alt="Legislação Contábil">
-        <div class="blog-content">
-          <h2>Legislação Contábil</h2>
-          <p>Fique por dentro das mudanças na legislação que afetam MEIs, pessoas físicas e empresas.</p>
-          <div class="blog-actions">
-            <a href="blog/legislacao/" class="btn">Ler mais</a>
-            <a href="blog/legislacao/" class="btn-outline">Ver todos</a>
-          </div>
-        </div>
-      </article>
-
-      <!-- Departamento Pessoal -->
-      <article class="blog-highlight">
-        <img src="https://via.placeholder.com/800x400" alt="Departamento Pessoal">
-        <div class="blog-content">
-          <h2>Departamento Pessoal</h2>
-          <p>Informações importantes sobre folha de pagamento, direitos trabalhistas e obrigações.</p>
-          <div class="blog-actions">
-            <a href="blog/departamento-pessoal/" class="btn">Ler mais</a>
-            <a href="blog/departamento-pessoal/" class="btn-outline">Ver todos</a>
-          </div>
-        </div>
-      </article>
-
-      <!-- Fiscal -->
-      <article class="blog-highlight">
-        <img src="https://via.placeholder.com/800x400" alt="Fiscal">
-        <div class="blog-content">
-          <h2>Fiscal</h2>
-          <p>Tributos, impostos e obrigações fiscais explicadas de forma simples.</p>
-          <div class="blog-actions">
-            <a href="blog/fiscal/" class="btn">Ler mais</a>
-            <a href="blog/fiscal/" class="btn-outline">Ver todos</a>
-          </div>
-        </div>
-      </article>
-
-      <!-- Contábil -->
-      <article class="blog-highlight">
-        <img src="https://via.placeholder.com/800x400" alt="Contábil">
-        <div class="blog-content">
-          <h2>Contábil</h2>
-          <p>Dicas práticas para manter sua contabilidade organizada e segura.</p>
-          <div class="blog-actions">
-            <a href="blog/contabil/" class="btn">Ler mais</a>
-            <a href="blog/contabil/" class="btn-outline">Ver todos</a>
+            <a href="/jl-servicos-contabeis/blog/contabilidade/" class="btn">Ler mais</a>
+            <a href="/jl-servicos-contabeis/blog/contabilidade/" class="btn-outline">Ver todos</a>
           </div>
         </div>
       </article>
@@ -126,15 +74,17 @@
 
   </main>
 
-  <!-- ===== CTA FIXO ===== -->
+  <!-- CTA -->
   <a href="https://wa.me/5500000000000" class="cta-fixed" target="_blank">
-    Fale no WhatsApp
+    WhatsApp
   </a>
 
-  <!-- ===== BOTÃO TOPO ===== -->
-  <button id="btn-topo" onclick="window.scrollTo({top: 0, behavior: 'smooth'});">
-    ↑
-  </button>
+  <!-- TOPO -->
+  <button id="btn-topo" onclick="window.scrollTo({top:0,behavior:'smooth'})">↑</button>
+
+  <!-- JS -->
+  <script src="menu.js"></script>
 
 </body>
 </html>
+
