--- a/index.html
+++ b/index.html
@@ -3,87 +3,124 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>J L Serviços Contábeis | Atendimento Online</title>
 
-  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
-
-  <!-- Fonte -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-  <!-- ================= HEADER ================= -->
-  <header class="site-header">
-    <div class="container header-center">
+<header class="site-header">
+  <div class="container header-center">
 
-      <h1 class="site-title">J L Serviços Contábeis</h1>
-      <p class="site-subtitle">Atendimento Online</p>
+    <h1 class="site-title">J L Serviços Contábeis</h1>
+    <p class="site-subtitle">Atendimento Online</p>
 
-      <!-- BOTÃO MENU MOBILE -->
-      <button class="menu-toggle" aria-label="Abrir menu">
-        ☰
-      </button>
+    <button class="menu-toggle">☰</button>
 
-      <!-- MENU -->
-      <nav class="main-nav">
-        <ul class="menu">
+    <nav class="main-nav">
+      <ul class="menu">
 
-          <li class="menu-item dropdown">
-            <a href="#" class="dropdown-toggle">Serviços</a>
-            <ul class="dropdown-menu">
-              <li><a href="/jl-servicos-contabeis/servicos/mei/">MEI</a></li>
-              <li><a href="/jl-servicos-contabeis/servicos/pessoa-fisica/">Pessoa Física</a></li>
-              <li><a href="/jl-servicos-contabeis/servicos/certidoes-regularizacoes/">Certidões e Regularizações</a></li>
-              <li><a href="/jl-servicos-contabeis/servicos/certificado-digital/">Certificado Digital</a></li>
-              <li><a href="/jl-servicos-contabeis/servicos/contabeis/">Serviços Contábeis</a></li>
-              <li><a href="/jl-servicos-contabeis/servicos/outros/">Outros Serviços</a></li>
-            </ul>
-          </li>
+        <li class="menu-item dropdown">
+          <a href="#" class="dropdown-toggle">Serviços</a>
+          <ul class="dropdown-menu">
+            <li><a href="/jl-servicos-contabeis/servicos/mei.html">MEI</a></li>
+            <li><a href="/jl-servicos-contabeis/servicos/pessoa-fisica.html">Pessoa Física</a></li>
+            <li><a href="/jl-servicos-contabeis/servicos/certidoes-regularizacoes.html">Certidões e Regularizações</a></li>
+            <li><a href="/jl-servicos-contabeis/servicos/certificado-digital.html">Certificado Digital</a></li>
+            <li><a href="/jl-servicos-contabeis/servicos/contabeis.html">Serviços Contábeis</a></li>
+            <li><a href="/jl-servicos-contabeis/servicos/outros.html">Outros Serviços</a></li>
+          </ul>
+        </li>
 
-          <li class="menu-item"><a href="/jl-servicos-contabeis/blog/">Blog</a></li>
-          <li class="menu-item"><a href="/jl-servicos-contabeis/sobre/">Sobre</a></li>
-          <li class="menu-item"><a href="/jl-servicos-contabeis/lgpd/">LGPD</a></li>
+        <li class="menu-item"><a href="/jl-servicos-contabeis/blog/">Blog</a></li>
+        <li class="menu-item"><a href="/jl-servicos-contabeis/sobre/">Sobre</a></li>
+        <li class="menu-item"><a href="/jl-servicos-contabeis/lgpd/">LGPD</a></li>
 
-        </ul>
-      </nav>
+      </ul>
+    </nav>
 
+  </div>
+</header>
+
+<main class="container">
+
+<section class="blog-home">
+
+  <!-- CONTABILIDADE GERAL -->
+  <article class="blog-highlight">
+    <img src="https://via.placeholder.com/800x400">
+    <div class="blog-content">
+      <h2>Contabilidade Geral</h2>
+      <p>Conceitos essenciais para manter sua vida financeira organizada.</p>
+      <div class="blog-actions">
+        <a class="btn" href="#">Ler mais</a>
+        <a class="btn-outline" href="#">Ver todos</a>
+      </div>
     </div>
-  </header>
+  </article>
 
-  <!-- ================= CONTEÚDO ================= -->
-  <main class="container">
+  <!-- LEGISLAÇÃO -->
+  <article class="blog-highlight">
+    <img src="https://via.placeholder.com/800x400">
+    <div class="blog-content">
+      <h2>Legislação Contábil</h2>
+      <p>Mudanças legais que impactam MEI, PF e negócios.</p>
+      <div class="blog-actions">
+        <a class="btn" href="#">Ler mais</a>
+        <a class="btn-outline" href="#">Ver todos</a>
+      </div>
+    </div>
+  </article>
 
-    <section class="blog-home">
+  <!-- DEPARTAMENTO PESSOAL -->
+  <article class="blog-highlight">
+    <img src="https://via.placeholder.com/800x400">
+    <div class="blog-content">
+      <h2>Departamento Pessoal</h2>
+      <p>Direitos trabalhistas, folha e obrigações.</p>
+      <div class="blog-actions">
+        <a class="btn" href="#">Ler mais</a>
+        <a class="btn-outline" href="#">Ver todos</a>
+      </div>
+    </div>
+  </article>
 
-      <article class="blog-highlight">
-        <img src="https://via.placeholder.com/800x400" alt="Contabilidade Geral">
-        <div class="blog-content">
-          <h2>Contabilidade Geral</h2>
-          <p>Entenda os principais conceitos contábeis e como eles impactam seu negócio.</p>
-          <div class="blog-actions">
-            <a href="/jl-servicos-contabeis/blog/contabilidade/" class="btn">Ler mais</a>
-            <a href="/jl-servicos-contabeis/blog/contabilidade/" class="btn-outline">Ver todos</a>
-          </div>
-        </div>
-      </article>
+  <!-- FISCAL -->
+  <article class="blog-highlight">
+    <img src="https://via.placeholder.com/800x400">
+    <div class="blog-content">
+      <h2>Fiscal</h2>
+      <p>Impostos, tributos e deveres fiscais explicados.</p>
+      <div class="blog-actions">
+        <a class="btn" href="#">Ler mais</a>
+        <a class="btn-outline" href="#">Ver todos</a>
+      </div>
+    </div>
+  </article>
 
-    </section>
+  <!-- CONTÁBIL -->
+  <article class="blog-highlight">
+    <img src="https://via.placeholder.com/800x400">
+    <div class="blog-content">
+      <h2>Contábil</h2>
+      <p>Boas práticas para manter tudo em ordem.</p>
+      <div class="blog-actions">
+        <a class="btn" href="#">Ler mais</a>
+        <a class="btn-outline" href="#">Ver todos</a>
+      </div>
+    </div>
+  </article>
 
-  </main>
+</section>
 
-  <!-- CTA -->
-  <a href="https://wa.me/5500000000000" class="cta-fixed" target="_blank">
-    WhatsApp
-  </a>
+</main>
 
-  <!-- TOPO -->
-  <button id="btn-topo" onclick="window.scrollTo({top:0,behavior:'smooth'})">↑</button>
+<a class="cta-fixed" href="https://wa.me/5500000000000">WhatsApp</a>
+<button id="btn-topo" onclick="window.scrollTo({top:0,behavior:'smooth'})">↑</button>
 
-  <!-- JS -->
-  <script src="menu.js"></script>
+<script src="menu.js"></script>
 
 </body>
 </html>
