--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 
     <li class="menu-item dropdown">
       <a href="#" class="dropdown-toggle">Serviços</a>
-
       <ul class="dropdown-menu">
         <li><a href="/jl-servicos-contabeis/servicos/mei/">MEI</a></li>
         <li><a href="/jl-servicos-contabeis/servicos/pessoa-fisica/">Pessoa Física</a></li>
@@ -37,12 +36,21 @@
       </ul>
     </li>
 
-    <li class="menu-item"><a href="/jl-servicos-contabeis/blog/">Blog</a></li>
-    <li class="menu-item"><a href="/jl-servicos-contabeis/sobre/">Sobre</a></li>
-    <li class="menu-item"><a href="/jl-servicos-contabeis/lgpd/">LGPD</a></li>
+    <li class="menu-item">
+      <a href="/jl-servicos-contabeis/blog/">Blog</a>
+    </li>
+
+    <li class="menu-item">
+      <a href="/jl-servicos-contabeis/sobre/">Sobre</a>
+    </li>
+
+    <li class="menu-item">
+      <a href="/jl-servicos-contabeis/lgpd/">LGPD</a>
+    </li>
 
   </ul>
 </nav>
+
 
   </div>
 </header>
