Refactor MEI services layout in index.html
Ajusta layout da página MEI para novo design

--- a/servicos/mei/index.html
+++ b/servicos/mei/index.html
@@ -17,72 +17,70 @@
     <span>MEI</span>
   </nav>
 
-  <main class="container">
+<main class="container">
 
-    <!-- ===== INTRO ===== -->
-    <section class="page-header">
-      <h1>Serviços para MEI</h1>
-      <p>Soluções completas para manter seu MEI regularizado, organizado e seguro.</p>
-    </section>
+  <!-- ===== BREADCRUMB ===== -->
+  <nav class="breadcrumb">
+    <a href="../../index.html">Início</a> ›
+    <a href="../">Serviços</a> ›
+    <span>MEI</span>
+  </nav>
 
-    <!-- ===== SERVIÇOS AVULSOS ===== -->
-    <section class="services-section">
+  <!-- ===== HEADER ===== -->
+  <section class="page-header">
+    <h1>Serviços para MEI</h1>
+    <p>Soluções completas para manter seu MEI regularizado, organizado e seguro.</p>
+  </section>
+
+  <!-- ===== LAYOUT PRINCIPAL ===== -->
+  <section class="mei-layout">
+
+    <!-- SERVIÇOS AVULSOS -->
+    <div class="mei-card">
       <h2>Serviços Avulsos</h2>
+      <ul class="services-list">
+        <li>Abertura de MEI</li>
+        <li>Regularização de MEI</li>
+        <li>Encerramento de MEI</li>
+        <li>Emissão de DAS</li>
+        <li>Declaração Anual (DASN-SIMEI)</li>
+        <li>Parcelamento de Débitos</li>
+        <li>Alteração de Dados do MEI</li>
+      </ul>
+    </div>
 
-      <div class="services-grid">
-        <div class="service-card">Abertura de MEI</div>
-        <div class="service-card">Regularização de MEI</div>
-        <div class="service-card">Encerramento de MEI</div>
-        <div class="service-card">Emissão de DAS</div>
-        <div class="service-card">Declaração Anual (DASN-SIMEI)</div>
-        <div class="service-card">Parcelamento de Débitos</div>
-        <div class="service-card">Alteração de Dados do MEI</div>
-      </div>
-    </section>
+    <!-- PLANO BÁSICO -->
+    <div class="mei-card">
+      <h3>Plano MEI Básico</h3>
+      <p class="plan-price">R$ 79 a R$ 99 / mês</p>
+      <ul class="plan-features">
+        <li>✔ Emissão mensal do DAS</li>
+        <li>✔ Lembrete de vencimentos</li>
+        <li>✔ DASN-SIMEI (1x ao ano)</li>
+        <li>✔ Suporte WhatsApp</li>
+        <li>✔ 10% off em serviços avulsos</li>
+      </ul>
+      <a href="#" class="mei-btn">Contratar Plano Básico</a>
+    </div>
 
-    <!-- ===== PLANOS MEI ===== -->
-    <section class="plans-section">
-      <h2>Planos MEI</h2>
+    <!-- PLANO PREMIUM -->
+    <div class="mei-card premium">
+      <h3>Plano MEI Premium</h3>
+      <p class="plan-price">R$ 129 a R$ 159 / mês</p>
+      <ul class="plan-features">
+        <li>✔ Tudo do Plano Básico</li>
+        <li>✔ Regularização fiscal</li>
+        <li>✔ Parcelamento de débitos</li>
+        <li>✔ Emissão de certidões</li>
+        <li>✔ Suporte prioritário</li>
+        <li>✔ 20% off em serviços avulsos</li>
+      </ul>
+      <a href="#" class="mei-btn">Contratar Plano Premium</a>
+    </div>
 
-      <div class="plans-grid">
+  </section>
 
-        <!-- PLANO BÁSICO -->
-        <div class="plan-card">
-          <h3>Plano MEI Básico</h3>
-          <p class="price">R$ 79 a R$ 99 / mês</p>
-          <ul>
-            <li>✔ Emissão mensal do DAS</li>
-            <li>✔ Lembrete de vencimentos</li>
-            <li>✔ DASN-SIMEI (1x ao ano)</li>
-            <li>✔ Acompanhamento básico</li>
-            <li>✔ Suporte WhatsApp</li>
-            <li>✔ 10% off em serviços avulsos</li>
-          </ul>
-          <a href="#" class="btn">Contratar Básico</a>
-        </div>
-
-        <!-- PLANO PREMIUM -->
-        <div class="plan-card featured">
-          <span class="badge">Mais contratado</span>
-          <h3>Plano MEI Premium</h3>
-          <p class="price">R$ 129 a R$ 159 / mês</p>
-          <ul>
-            <li>✔ Tudo do Plano Básico</li>
-            <li>✔ Parcelamento de débitos</li>
-            <li>✔ Regularização fiscal</li>
-            <li>✔ Orientação personalizada</li>
-            <li>✔ Emissão de certidões</li>
-            <li>✔ Suporte prioritário</li>
-            <li>✔ Relatório mensal</li>
-            <li>✔ 20% off em serviços avulsos</li>
-          </ul>
-          <a href="#" class="btn">Contratar Premium</a>
-        </div>
-
-      </div>
-    </section>
-
-  </main>
+</main>
 
   <!-- CTA FIXO -->
   <a href="https://wa.me/5500000000000" class="cta-fixed" target="_blank">
