--- a/servicos/mei/index.html
+++ b/servicos/mei/index.html
@@ -18,70 +18,50 @@
     <span>MEI</span>
   </nav>
 
-<main class="container">
+<div class="services-layout">
 
-  <!-- ===== BREADCRUMB ===== -->
-  <nav class="breadcrumb">
-    <a href="../../index.html">Início</a> ›
-    <a href="../">Serviços</a> ›
-    <span>MEI</span>
-  </nav>
+  <section class="services-section card">
+    <h2>Serviços Avulsos</h2>
 
-  <!-- ===== HEADER ===== -->
-  <section class="page-header">
-    <h1>Serviços para MEI</h1>
-    <p>Soluções completas para manter seu MEI regularizado, organizado e seguro.</p>
+    <div class="services-grid">
+      <div class="service-card">Abertura de MEI</div>
+      <div class="service-card">Regularização de MEI</div>
+      <div class="service-card">Encerramento de MEI</div>
+      <div class="service-card">Emissão de DAS</div>
+      <div class="service-card">Declaração Anual</div>
+      <div class="service-card">Parcelamento</div>
+      <div class="service-card">Alteração de Dados</div>
+    </div>
   </section>
 
-  <!-- ===== LAYOUT PRINCIPAL ===== -->
-  <section class="mei-layout">
-
-    <!-- SERVIÇOS AVULSOS -->
-    <div class="mei-card">
-      <h2>Serviços Avulsos</h2>
-      <ul class="services-list">
-        <li>Abertura de MEI</li>
-        <li>Regularização de MEI</li>
-        <li>Encerramento de MEI</li>
-        <li>Emissão de DAS</li>
-        <li>Declaração Anual (DASN-SIMEI)</li>
-        <li>Parcelamento de Débitos</li>
-        <li>Alteração de Dados do MEI</li>
-      </ul>
-    </div>
-
-    <!-- PLANO BÁSICO -->
-    <div class="mei-card">
-      <h3>Plano MEI Básico</h3>
-      <p class="plan-price">R$ 79 a R$ 99 / mês</p>
-      <ul class="plan-features">
-        <li>✔ Emissão mensal do DAS</li>
-        <li>✔ Lembrete de vencimentos</li>
-        <li>✔ DASN-SIMEI (1x ao ano)</li>
-        <li>✔ Suporte WhatsApp</li>
-        <li>✔ 10% off em serviços avulsos</li>
-      </ul>
-      <a href="#" class="mei-btn">Contratar Plano Básico</a>
-    </div>
-
-    <!-- PLANO PREMIUM -->
-    <div class="mei-card premium">
-      <h3>Plano MEI Premium</h3>
-      <p class="plan-price">R$ 129 a R$ 159 / mês</p>
-      <ul class="plan-features">
-        <li>✔ Tudo do Plano Básico</li>
-        <li>✔ Regularização fiscal</li>
-        <li>✔ Parcelamento de débitos</li>
-        <li>✔ Emissão de certidões</li>
-        <li>✔ Suporte prioritário</li>
-        <li>✔ 20% off em serviços avulsos</li>
-      </ul>
-      <a href="#" class="mei-btn">Contratar Plano Premium</a>
-    </div>
-
+  <section class="plan-card card">
+    <h3>Plano MEI Básico</h3>
+    <p class="price">R$ 79 a R$ 99 / mês</p>
+    <ul>
+      <li>✔ Emissão DAS</li>
+      <li>✔ DASN anual</li>
+      <li>✔ Suporte WhatsApp</li>
+      <li>✔ 10% off avulsos</li>
+    </ul>
+    <a href="#" class="btn">Contratar Básico</a>
   </section>
 
-</main>
+  <section class="plan-card card featured">
+    <span class="badge">Mais contratado</span>
+    <h3>Plano MEI Premium</h3>
+    <p class="price">R$ 129 a R$ 159 / mês</p>
+    <ul>
+      <li>✔ Tudo do Básico</li>
+      <li>✔ Regularização fiscal</li>
+      <li>✔ Certidões</li>
+      <li>✔ Suporte prioritário</li>
+      <li>✔ 20% off avulsos</li>
+    </ul>
+    <a href="#" class="btn">Contratar Premium</a>
+  </section>
+
+</div>
+
 
   <!-- CTA FIXO -->
   <a href="https://wa.me/5500000000000" class="cta-fixed" target="_blank">
